// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TodoInput renders input field and submit button 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <form
      class="flex"
    >
      <input
        class="flex-grow p-3 bg-gray-700 border border-gray-600 rounded-l-lg text-white placeholder-gray-400 focus:outline-none focus:ring-0 focus:ring-inset focus:border-blue-500"
        placeholder="What needs to be done?"
        type="text"
        value=""
      />
      <button
        class="bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white font-semibold py-3 px-6 rounded-r-lg transition-all duration-200 shadow-lg hover:shadow-xl"
        type="submit"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </form>
  </div>
</div>
`;

exports[`TodoInput shows error message when trying to submit empty task 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <form
      class="flex"
    >
      <input
        class="flex-grow p-3 bg-gray-700 border border-gray-600 rounded-l-lg text-white placeholder-gray-400 focus:outline-none focus:ring-0 focus:ring-inset focus:border-blue-500"
        placeholder="What needs to be done?"
        type="text"
        value=""
      />
      <button
        class="bg-gradient-to-r from-blue-600 to-blue-700 hover:from-blue-700 hover:to-blue-800 text-white font-semibold py-3 px-6 rounded-r-lg transition-all duration-200 shadow-lg hover:shadow-xl"
        type="submit"
      >
        <svg
          class="w-5 h-5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4v16m8-8H4"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </form>
    <div
      class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-lg shadow-md animate-fade-in"
    >
      <div
        class="flex items-center"
      >
        <svg
          class="w-5 h-5 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="font-medium"
        >
          Please enter a task
        </span>
      </div>
    </div>
  </div>
</div>
`;
